<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:background="@drawable/ters_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_form"
        android:layout_width="406dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/login_form"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_action_user_2"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_action_pass"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_bn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/user_pass"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_red_card"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="212dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/login_screen_image"
        app:srcCompat="@drawable/key" />


</RelativeLayout>